--- a/src/content/technotes/TN0033-sdui-patterns.mdx
+++ b/src/content/technotes/TN0033-sdui-patterns.mdx
@@ -5,7 +5,7 @@ tags: [schema patterns]
 ---
 
 
-These patterns provide examples of server-driven ui and how you may structure your graph’s schema to encode and represent user-interface elements. A client would use a platform specific rendering engine to interpret the schema and generate interface components, for an example of a dynamic rendering client see [TN32](/technotes/TN0032).
+These patterns provide examples of server-driven ui and how you may structure your graph’s schema to encode and represent user-interface elements. A client would use a platform specific rendering engine to interpret the schema and generate interface components, for an example of a dynamic rendering client see [TN32](./TN0032-sdui-and-graphql.mdx).
 
 ## Device-based SDUI (with Enums)
 
