--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -205,7 +205,7 @@ The `EmbeddedSandbox` object takes an options object with the following structur
       },
     })
   },
-  includeCookies: false,
+  hideCookieToggle: true,
 }
 ```
 
@@ -264,6 +264,22 @@ You might want to do this if you need to include specific headers in every reque
 <tr>
 <td>
 
+##### `hideCookieToggle`
+
+`boolean`
+
+</td>
+<td>
+
+By default, the embedded Sandbox does not show the includeCookies toggle in the connection settings.
+
+You can set `hideCookieToggle` to `false` if you want to let users of your embedded Sandbox instance to toggle the `includeCookies` setting in embedded Sandbox.
+</td>
+</tr>
+
+<tr>
+<td>
+
 ##### `includeCookies`
 
 `boolean`
@@ -271,13 +287,15 @@ You might want to do this if you need to include specific headers in every reque
 </td>
 <td>
 
-By default, the embedded Sandbox uses the default `fetch` function to make requests, which passes `{ credentials: 'omit' }`.
+By default, the embedded Sandbox uses your `includeCookies` value from your sandbox connection settings.
 
 You can set `includeCookies` to `true` if you instead want the Explorer to pass `{ credentials: 'include' }` for its requests.
 
 If you pass the `handleRequest` option, this option is ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
+
+This config option is **deprecated** in using the sandbox connection settings cookie toggle and setting the default includeCookies value with `initialState.includeCookies`
 </td>
 </tr>
 
