Apply suggestions from code review
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -277,7 +277,7 @@ If you pass the `handleRequest` option, this option is ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 
-This config option is **deprecated** in favor of using the includeCookies connection setting on your variant in Studio
+This config option is **deprecated** in favor of configuring the **Include cookies** setting for your variant in the _non_-embedded Explorer.
 </td>
 </tr>
 
