--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -271,9 +271,9 @@ You might want to do this if you need to include specific headers in every reque
 </td>
 <td>
 
-By default, the embedded Sandbox does not show the includeCookies toggle in the connection settings.
+By default, the embedded Sandbox does not show the **Include cookies** toggle in its connection settings.
 
-You can set `hideCookieToggle` to `false` if you want to let users of your embedded Sandbox instance to toggle the `includeCookies` setting in embedded Sandbox.
+Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox instance to toggle the **Include cookes** setting.
 </td>
 </tr>
 
@@ -287,7 +287,7 @@ You can set `hideCookieToggle` to `false` if you want to let users of your embed
 </td>
 <td>
 
-By default, the embedded Sandbox uses your `includeCookies` value from your sandbox connection settings.
+By default, the embedded Sandbox uses your `includeCookies` value from your Sandbox connection settings.
 
 You can set `includeCookies` to `true` if you instead want the Explorer to pass `{ credentials: 'include' }` for its requests.
 
@@ -295,7 +295,7 @@ If you pass the `handleRequest` option, this option is ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 
-This config option is **deprecated** in using the sandbox connection settings cookie toggle and setting the default includeCookies value with `initialState.includeCookies`
+This config option is **deprecated** in favor of using the Sandbox connection settings cookie toggle and setting the default value via `initialState.includeCookies`.
 </td>
 </tr>
 
