--- a/src/content/technotes/TN0001-client-id-enforcement.mdx
+++ b/src/content/technotes/TN0001-client-id-enforcement.mdx
@@ -2,7 +2,7 @@
 title: Client ID enforcement
 id: TN0001
 description: Require client details and operation names to help monitor schema usage
-tags: [server, observability]
+tags: [server, observability, router]
 ---
 
 As part of Apollo Studio metrics reporting, servers can [tag reported operations with the requesting client's name and version](/graphos/metrics/client-awareness). This helps graph maintainers understand which clients are using which fields in the schema.
@@ -11,15 +11,12 @@ Clients can (and should) also [name their GraphQL operations](/react/data/operat
 
 Together, these pieces of information help teams monitor their graph and make changes to it safely. We strongly encourage that your GraphQL gateway _require_ client details _and_ operation names from all requesting clients.
 
-Customers using Apollo Router and Managed Federation should enable client awareness through the [router configuration file](/router/managed-federation/client-awareness/) directly.
+## Enforcing in Apollo Router
 
-## Enforcing in Apollo Server
+Customers using Apollo Router and Managed Federation should enable client awareness through the [router configuration file](/router/managed-federation/client-awareness/) directly. 
 
-If you're using Apollo Server for your gateway, you can require client metadata in every incoming request with a [custom plugin](/apollo-server/integrations/plugins/):
+Client headers can also be enforced using a [Rhai script](/router/customizations/rhai) on every incoming request.
 
-> The header names used below are the default headers sent by Apollo Client, but you can change them to whatever names your client uses. Additionally, these changes should be reflected in the [usage reporting plugin](/apollo-server/api/plugin/usage-reporting/#generateclientinfo).
-
-<MultiCodeBlock>
 ```rhai title="client-id.rhai"
 fn supergraph_service(service) {
     const request_callback = Fn("process_request");
@@ -30,6 +27,7 @@ fn process_request(request) {
   log_info("processing request");
   let valid_clients = ["1", "2"];
   let valid_client_names = ["apollo-client"];
+
   if ("apollographql-client-version" in request.headers && "apollographql-client-name" in request.headers) {
     let client_header = request.headers["apollographql-client-version"];
     let name_header = request.headers["apollographql-client-name"];
@@ -59,6 +57,14 @@ fn process_request(request) {
 }
 ```
 
+## Enforcing in Apollo Server
+
+If you're using Apollo Server for your gateway, you can require client metadata in every incoming request with a [custom plugin](/apollo-server/integrations/plugins/):
+
+> The header names used below are the default headers sent by Apollo Client, but you can change them to whatever names your client uses. Additionally, these changes should be reflected in the [usage reporting plugin](/apollo-server/api/plugin/usage-reporting/#generateclientinfo).
+
+<MultiCodeBlock>
+
 ```ts title="index.ts"
 function clientEnforcementPlugin(): ApolloServerPlugin<BaseContext> {
   return {
@@ -71,46 +77,6 @@ function clientEnforcementPlugin(): ApolloServerPlugin<BaseContext> {
           const clientVersion = requestContext.request.http.headers.get(
             "apollographql-client-version"
           );
-
-          if (!clientName) {
-            const logString = `Execution Denied: Operation has no identified client`;
-            requestContext.logger.debug(logString);
-            throw new GraphQLError(logString);
-          }
-
-          if (!clientVersion) {
-            const logString = `Execution Denied: Client ${clientName} has no identified version`;
-            requestContext.logger.debug(logString);
-            throw new GraphQLError(logString);
-          }
-
-          if (!requestContext.operationName) {
-            const logString = `Unnamed Operation: ${requestContext.queryHash}. All operations must be named`;
-            requestContext.logger.debug(logString);
-
-            throw new GraphQLError(logString);
-          }
-        },
-      };
-    },
-  };
-}
-const server = new ApolloServer({
-  typeDefs,
-  resolvers,
-  plugins: [clientEnforcementPlugin()],
-});
-```
-
-```js title="index.js"
-function clientEnforcementPlugin() {
-  return {
-    async requestDidStart() {
-      return {
-        async didResolveOperation(requestContext) {
-          const clientName = requestContext.request.http.headers.get('apollographql-client-name');
-
-          const clientVersion = requestContext.request.http.headers.get('apollographql-client-version');
 
           if (!clientName) {
             const logString = `Execution Denied: Operation has no identified client`;
