Drop preview from cloud routing docs

--- a/src/content/graphos/routing/cloud.mdx
+++ b/src/content/graphos/routing/cloud.mdx
@@ -83,9 +83,9 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 #### Which regions are available for cloud routers?
 
-During the preview phase, infrastructure for cloud routing is in Chicago, USA. Our infrastructure has interconnects with the major public cloud providers, so latency is minimal.
+Cloud routing is available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10ms.
 
-For example, latency between Chicago and AWS in Virginia is approximately 10ms. We will likely be adding available regions in the coming months, so please [reach out](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform) if you have specific requirements.
+We're actively working to add support for more regions. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
 #### Can I choose my cloud router's region?
 
@@ -93,7 +93,7 @@ Not yet, but we're working to make additional regions available. If there's a re
 
 #### Will cloud routing support multi-region and/or edge caching?
 
-Our goal with cloud routing is to deliver global, industry-leading graph performance. During the preview phase, routing infrastructure is hosted in one region, with plans to expand globally and add caching support in 2023.
+Our goal with cloud routing is to deliver global, industry-leading graph performance. Routing infrastructure is hosted in one region with plans to expand globally and add caching support in 2023.
 
 #### Does GraphOS also host my individual subgraphs?
 
